# kairos-cedar

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  lean-build.yml  md-lint.yml  self-quality.yml
cedar-full/: CedarFull.lean  MeasureDiff.lean  MeasureFull.lean  MeasureLean.lean  lake-manifest.json  lakefile.toml
cedar-full/CedarFull/: Expr.lean  HasType.lean  LeanOracle.lean  PolicyGen.lean  SchemaGen.lean  Soundness.lean  Test.lean
cedar-micro/: CedarMicro.lean  Main.lean  MainLLM.lean  MeasureAll.lean  MeasureFuel.lean  MeasurePalamedes.lean  lake-manifest.json  lakefile.toml
cedar-micro/CedarMicro/: Coverage.lean  Expr.lean  GenLLM.lean  HasType.lean  Soundness.lean  Ty.lean  WellTyped.lean
cedar-spec-bridge/: CedarBridge.lean  lakefile.toml
cedar-spec-bridge/CedarBridge/: Attribution.lean  Predicates.lean
containers/: Containerfile  compose.yaml  palamedes.Containerfile  rust-verus.Containerfile  spec.Containerfile
demo/: README.md  run_demo.py
demo/fixtures/: requests.jsonl  schema.cedarschema
docs/: ARCHITECTURE.md  ROADMAP.md  opa-bridge-design.md  symcc-walkthrough.md
examples/: README.md
examples/01-basic-rbac/: README.md  entities.json  policy.cedar  run.sh
examples/02-symcc-never-errors/: README.md  policy.cedar  policy_unsafe.cedar  run.sh  schema.cedarschema
examples/03-byte-fuzz-against-custom-schema/: README.md  run.sh
examples/04-type-directed-diff-test/: README.md  run.sh
experiments/byte_fuzz_baseline/: Cargo.toml  README.md
experiments/byte_fuzz_baseline/src/: main.rs
experiments/lean_tp_v1/: README.md  run_lm_lean_tp.py
experiments/lib/: __init__.py  cedar_cli.py
experiments/phase_a_v1/: RESULTS.md  run_iter_1.py  run_iter_2.py  run_iter_3.py  run_loop.py
experiments/phase_a_v2/: backfill_archived_runs.py  drive_sample_generator.py  run_fleet_sweep.sh  run_lm_palamedes_sampled.py  run_sonnet_traced.py  run_via_sdk.py
experiments/phase_c_baseline/: run_baseline.py
experiments/phase_c_cm_diff/: .gitignore  run_cm_diff.py
experiments/phase_c_diff/: .gitignore  _rust_runner.py  lean_oracle_design.md  lean_runner.py  run_diff.py
experiments/phase_c_n100k/: SUMMARY.md  _go_input.jsonl  _rust_input.jsonl  _rust_runner.py  results_phase_a.jsonl  results_phase_b.jsonl  run_n100k.py  widened_shapes_v2.py
experiments/phase_d_drt_headtohead/: .gitignore  comparison_table.tex  run_headtohead.py  sanitize_summary.py
experiments/phase_d_drt_headtohead/cedar_drt_replica/: Cargo.toml
experiments/phase_d_drt_headtohead/cedar_drt_replica/src/: main.rs  typed_main.rs
experiments/phase_d_mutants/: paper_paragraph.tex  run_mutants.py
experiments/phase_e_real_bugs/: .gitignore  entities_decimal_canonical.json  entities_decimal_padded.json  entities_ip_bare.json  entities_ip_explicit32.json  policy_eval_decimal.cedar  policy_eval_ip.cedar
experiments/phase_h2_datetime_duration/: .gitignore  SUMMARY.md  results.jsonl  run_widened.py  widened_shapes.py
experiments/phase_h_json_roundtrip/: SUMMARY.md  probe_inputs.py  run_roundtrip.py
experiments/phase_i_entity_schema/: SUMMARY.md
experiments/phase_i_schema_roundtrip/: .gitignore  SUMMARY.md  probe_schemas.py  (+1 more)
opa-bridge/: RegoBridge.lean  lake-manifest.json  lakefile.toml
rego-full/: MeasureRego.lean  RegoFull.lean  lake-manifest.json  lakefile.toml
scripts/: dc  preflight.py
tests/: README.md  generator_manifest.toml  test_cedar_cli_rc_semantics.py  test_preflight.py  test_repo_hygiene.py  test_support_size_matches_claim.py  test_toolchain_pin_consistency.py  test_version_pin_matches_paper.py  version_pin.toml
(+250 files in other folders)
