[package]
name = "cedar_drt_replica"
version = "0.1.0"
edition = "2021"
publish = false

# Mirrors the byte-level pipeline that cedar-drt's `simple-parser` and
# `abac-type-directed` fuzz targets implement, but standalone (no
# cargo-fuzz / no Lean FFI / no libfuzzer) so it runs in the kairos-cedar
# image without the full cedar-spec build.
#
# We measure: bytes -> parser-reach + evaluator-reach + disagreement,
# the same metric cedar-drt produces, against the cedar-policy parser +
# evaluator already in our image.

[dependencies]
cedar-policy = { version = "4.10", features = [] }
cedar-policy-core = { version = "4.10", features = ["arbitrary"] }
arbitrary = "1.4"
rand = "0.8"
rand_chacha = "0.3"
serde_json = "1.0"

[[bin]]
name = "cedar_drt_replica"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
